--- a/src/styles.css
+++ b/src/styles.css
@@ -5,5 +5,5 @@ body, h1, h2, p, ul, li {
 }
 body {
   font-family: Arial, sans-serif;
-  background-color: #F3FF90;
+  background-color: whitesmoke;
 }
