--- a/src/app/app.css
+++ b/src/app/app.css
@@ -1,5 +1,5 @@
 header {
-  background-color: #F3FF90;
+  background-color: whitesmoke;
   color: black;
   padding: 10px 0;
 }
@@ -23,10 +23,10 @@ h3 {
 
 
 nav {
-  background-color: #9BEC00;
+  background-color: #206339;
   padding: 10px 0;
   box-shadow: 0 0 10px rgba(0,0,0,0.5);
-  border: 1px solid white;
+  border: 1px solid black;
 }
 
 nav ul {
@@ -36,7 +36,7 @@ nav ul {
 }
 
 nav a {
-  color: black;
+  color: white;
   text-decoration: none;
   position: relative;
   top: 10px
@@ -88,10 +88,6 @@ progress::-moz-progress-bar {
   border-radius: 10px;
 
 }
-progress::-moz-progress-value {
-  background: slateblue;
-  border-radius: 10px;
-}
 
 progress::-webkit-progress-value {
   background: slateblue;
@@ -126,7 +122,7 @@ table {
 }
 
 table, th, td {
-  border: 1px solid lightgray;
+  border: 1px solid #5d9dc0;
 }
 
 caption {
@@ -134,11 +130,12 @@ caption {
   font-size: 22px;
   font-weight: bold;
   color: black;
-  background-color: #06D001;
+  background-color: #3864ad;
+  border-radius: 5px 5px 0 0;
 }
 
 thead {
-  background-color: gray;
+  background-color: #3864ad;
   color: white;
 }
 
