--- a/src/app/app.css
+++ b/src/app/app.css
@@ -1,167 +1,61 @@
-header {
-  background-color: whitesmoke;
-  color: black;
-  padding: 10px 0;
-}
 
-hgroup {
-  margin: 0 2px;
-}
-hgroup h1, hgroup h3 {
-  margin-left: 20px;
-}
 
 h1 {
-  font-size: 80px;
-  font-style: italic;
-  font-family: "Brush Script MT", serif;
+  padding: 0 1rem;
 }
 
-h3 {
-  margin-top: 0;
-}
+h2 {padding: 1rem;}
 
-
-nav {
+mat-toolbar{
   background-color: #206339;
-  padding: 10px 0;
-  box-shadow: 0 0 10px rgba(0,0,0,0.5);
-  border: 1px solid black;
+  color: whitesmoke;
+  position:fixed;
+  top:0;
+  z-index: 2;
 }
 
-nav ul {
-  display: flex;
-  justify-content: space-around;
-  list-style-type: none;
+mat-sidenav-container {
+  height:100%;
 }
 
-nav a {
-  color: white;
-  text-decoration: none;
-  position: relative;
-  top: 10px
+/*// Move the content down so that it won't be hidden by the toolbar*/
+mat-sidenav {
+  padding-top: 3.5rem;
+  @media screen and (min-width: 600px) {
+    padding-top: 4rem;
+  }
+
+  .entry{
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+    padding:0.75rem;
+  }
 }
 
-main {
-  padding: 20px;
+/*// Move the content down so that it won't be hidden by the toolbar*/
+mat-sidenav-content{
+  padding-top: 3.5rem;
   background-color: whitesmoke;
-  margin: 20px 20px 100px;
-  border-radius: 5px;
-  box-shadow: 0 0 10px rgba(0,0,0,0.1);
+  @media screen and (min-width: 600px) {
+    padding-top: 4rem;
+  }
 }
 
-section {
-  margin-bottom: 20px;
-
+.mat-mdc-icon-button {
+  color: whitesmoke;
 }
 
-p, ul {
-  margin-bottom: 20px;
-}
-aside {
-  background-color: whitesmoke;
-  padding: 20px;
-  border-radius: 5px;
-  margin-bottom: 20px;
+.entry:hover {
+  border-radius: 0; !important;
+  color: #5d9dc0;
 }
 
-aside ul li {
-  list-style-type: none;
-  margin-bottom: 10px;
+.mat-drawer {
+  width: auto;
 }
 
-progress {
-  margin: 5px auto;
-  width: 100%;
-  height: 20px;
-  border-radius: 10px;
-}
-
-progress::-webkit-progress-bar {
-  background: silver;
-  border-radius: 10px;
-
-}
-
-progress::-moz-progress-bar {
-  background: silver;
-  border-radius: 10px;
-
-}
-
-progress::-webkit-progress-value {
-  background: slateblue;
-  border-radius: 10px;
-
-}
-
-footer {
-  background-color: black;
-  color: white;
-  text-align: center;
-  padding: 20px;
-  width: 100%;
-  position: fixed;
-  bottom: 0;
-}
-
-footer p {
-  position: relative;
-  top: 10px;
-}
-
-/*table*/
-
-table {
-  width: 100%;
-  max-width: 800px;
-  margin: 20px auto;
-  border-collapse: collapse;
-  box-shadow: 0px 0px 30px rgba(0,0,0,0.3);
-  border-radius: 5px;
-}
-
-table, th, td {
-  border: 1px solid #5d9dc0;
-}
-
-caption {
-  padding: 10px;
-  font-size: 22px;
-  font-weight: bold;
-  color: black;
-  background-color: #3864ad;
-  border-radius: 5px 5px 0 0;
-}
-
-thead {
-  background-color: #3864ad;
-  color: white;
-}
-
-th, td {
-  padding: 10px 15px;
-  text-align: left;
-}
-
-tbody tr:nth-child(even) {
-  background-color: whitesmoke;
-}
-
-tbody tr:nth-child(odd) {
-  background-color: white;
-}
-
-tbody tr:hover {
-  background-color: lightyellow;
-  cursor: pointer;
-}
-
-tfoot {
-  background-color: black;
-  color: white;
-}
-
-tfoot tr {
+.main-container {
+  margin: 20px 20px auto;
   position: relative;
 }
