--- a/src/app/app.html
+++ b/src/app/app.html
@@ -3,7 +3,7 @@
 <!--    <mat-icon>menu</mat-icon>-->
     <img ngSrc="/icon.png" class="header-icon" alt="alt" height="200" width="200">
   </button>
-  <h1>ICOC PH | <em>MyPledge</em></h1>
+  <h1><strong>ICOC PH </strong>| <em>MyPledge</em></h1>
 
 </mat-toolbar>
 <mat-sidenav-container autosize>
