--- a/src/app/app.css
+++ b/src/app/app.css
@@ -44,6 +44,16 @@ h1 {
     width: 100%;
     padding: 0 0 0 10px;
   }
+
+  .mat-toolbar{
+    background-color: whitesmoke;
+    color: whitesmoke;
+    position:absolute;
+    top:0;
+    z-index: 2;
+    height: 64px;
+    border-bottom: 2px solid #206339;
+  }
 }
 
 /*desktop*/
